<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>htb_description</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>

  <author email="martin.nievas.ar@gmail.com">Martin Nievas</author>

  <maintainer email="martin.nievas.ar@gmail.com">Martin Nievas</maintainer>


  <license>Apache-2.0</license>

  <url type="website">https://htb-hovertablebot.github.io/</url>
  <url type="repository">https://github.com/HTB-HoverTableBot</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
