<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>htb_hardware</name>
  <version>0.1.0</version>
  <description>HoverTableBot ros2_control Hardware description. This package provides HTB hardware description and is used is used with `htb_bringup` and `htb_description` packages</description>

  <maintainer email="martin.nievas.ar@gmail.com">Martin Nievas</maintainer>

  <license>Apache-2.0</license>

  <url type="website">https://htb-hovertablebot.github.io/</url>
  <url type="repository">https://github.com/HTB-HoverTableBot</url>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>